--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,21 +1,63 @@
 <header>
-    <!-- Navbar -->
-    <nav>
-        <div class="container">
-            <div class="navbar">
-                <div class="logo"> <a href="#"> Quantum Secretary </a> </div>
-                <ul class="menu">
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>За компанията</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Какво предлагаме</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Как да започнем </a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>Тест </a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link" data-scroll>FAQ </a></li>
-                </ul>
-                <div class="burger">
-                    <span></span>
-                </div>
-                <a class="navabar-btn">Инвестирайте</a>
-            </div>
+  <!-- Navbar -->
+  <nav>
+    <div class="main-container">
+      <div class="navbar">
+        <div class="logo">
+          <a href="#">
+            <img src="../img/logo.svg" alt="" /> Quantum Secretary
+          </a>
         </div>
-    </nav>
+        <ul class="menu">
+          <div class="logo logo-mobile">
+            <a href="#">
+              <img src="../img/logo.svg" alt="" /> Quantum Secretary
+            </a>
+          </div>
+          <li class="menu__item menu__item-first">
+            <a href="#" class="menu__item-link" data-scroll>За компанията</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link" data-scroll>Какво предлагаме</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link" data-scroll>Как да започнем </a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link" data-scroll>Тест </a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__item-link" data-scroll>FAQ </a>
+          </li>
+          <div class="lang-mobile">
+            <a class="lang-mobile-bg">
+              <img src="../img/bg-flag.svg" alt="" />BG
+            </a>
+            <a class="lang-mobile-de">
+              <img src="../img/de-flag.svg" alt="" />DE
+            </a>
+          </div>
+          <a class="navabar-btn navabar-btn-mobile">Инвестирайте</a>
+        </ul>
+        <div class="burger">
+          <span></span>
+        </div>
+        <div class="btn-and-lang">
+          <div class="lang">
+            <div class="main-lang">
+              <img src="../img/bg-flag.svg" alt="" />
+              BG
+              <img src="../img/lang-dropdown.svg" alt="" />
+            </div>
+
+            <a class="lang-dropdown">
+              <img src="../img/de-flag.svg" alt="" />
+              DE
+            </a>
+          </div>
+          <a class="navabar-btn navabar-btn-pc">Инвестирайте</a>
+        </div>
+      </div>
+    </div>
+  </nav>
 </header>
