--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,5 +1,16 @@
 <footer>
-    <div class="container">
-        <div class="footer">Footer</div>
+  <div class="main-container">
+    <div class="footer">
+      <div class="footer-logo">
+        <img src="../img/logo.svg" alt="" />
+        <span>Quantum Broker</span>
+      </div>
+      <div class="footer-info">
+        <a class="footer-info__item"> Политика за поверителност </a>
+        <a class="footer-info__item"> Условия за ползване </a>
+        <a class="footer-info__item"> 2024. Всички права запазени </a>
+      </div>
+      <a class="navabar-btn">Инвестирайте</a>
     </div>
+  </div>
 </footer>
