--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -10,7 +10,7 @@
         <a class="footer-info__item"> Условия за ползване </a>
         <a class="footer-info__item"> 2024. Всички права запазени </a>
       </div>
-      <a class="navabar-btn">Инвестирайте</a>
+      <a href="#test" class="navabar-btn">Инвестирайте</a>
     </div>
   </div>
 </footer>
