--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -15,19 +15,25 @@
             </a>
           </div>
           <li class="menu__item menu__item-first">
-            <a href="#" class="menu__item-link" data-scroll>За компанията</a>
+            <a href="#about" class="menu__item-link" data-scroll
+              >За компанията</a
+            >
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link" data-scroll>Какво предлагаме</a>
+            <a href="#benefits" class="menu__item-link" data-scroll
+              >Какво предлагаме</a
+            >
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link" data-scroll>Как да започнем </a>
+            <a href="#how" class="menu__item-link" data-scroll
+              >Как да започнем
+            </a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link" data-scroll>Тест </a>
+            <a href="#test" class="menu__item-link" data-scroll>Тест </a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link" data-scroll>FAQ </a>
+            <a href="#faq" class="menu__item-link" data-scroll>FAQ </a>
           </li>
           <div class="lang-mobile">
             <a class="lang-mobile-bg">
@@ -55,7 +61,7 @@
               DE
             </a>
           </div>
-          <a class="navabar-btn navabar-btn-pc">Инвестирайте</a>
+          <a href="#test" class="navabar-btn navabar-btn-pc">Инвестирайте</a>
         </div>
       </div>
     </div>
