--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,33 @@
           <div class="info__card">
             <div class="tabs info__card-tabs">
               <div class="tabs__header">
-                <div class="tabs__header-item active">Табло</div>
-                <div class="tabs__header-item">Анализ</div>
-                <div class="tabs__header-item">Отчети</div>
-                <div class="tabs__header-item">Изтегляне</div>
-                <div class="tabs__header-item">Настройки</div>
+                <div class="tabs__header-items">
+                  <div class="tabs__header-item active">Табло</div>
+                  <div class="tabs__header-item">Анализ</div>
+                  <div class="tabs__header-item">Отчети</div>
+                  <div class="tabs__header-item">Изтегляне</div>
+                  <div class="tabs__header-item">Настройки</div>
+                </div>
+                <div class="tabs__header-profile">
+                  <img
+                    src="img/ava.svg"
+                    alt=""
+                    class="tabs__header-profile-img"
+                  />
+                  <div class="tabs__header-profile-text">
+                    <div class="tabs__header-profile-text-name">
+                      Лаура Салил
+                    </div>
+                    <div class="tabs__header-profile-text-descr">
+                      Вашият профил
+                    </div>
+                  </div>
+                  <img
+                    src="img/faq-arrow-notactive.svg"
+                    alt=""
+                    class="tabs__header-profile-arrow"
+                  />
+                </div>
               </div>
               <div class="tabs__content">
                 <div class="tabs__content-item">
@@ -108,16 +130,12 @@
                         </div>
                       </div>
 
-                      <div class="info__content__balance-btn btn">
+                      <a href="#test" class="info__content__balance-btn btn">
                         Изтегляне
-                      </div>
+                      </a>
                     </div>
                   </div>
                 </div>
-                <div class="tabs__content-item">2</div>
-                <div class="tabs__content-item">3</div>
-                <div class="tabs__content-item">4</div>
-                <div class="tabs__content-item">5</div>
               </div>
               <img src="img/eclipse-info.svg" alt="" class="info-img-abs" />
             </div>
@@ -191,9 +209,9 @@
                 Quantum Secretary е безопасен и проектиран така, че автоматично
                 да максимизира печалбите при минимални разходи
               </div>
-              <div class="about__row-second-card-btn btn">
+              <a href="#test" class="about__row-second-card-btn btn">
                 Инвестирайте в бъдещето си
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -272,7 +290,7 @@
                 въведете личните си данни, за да създадете акаунт. Това е бързо
                 и лесно.
               </div>
-              <a href="#" class="how__card-info-link"
+              <a href="#test" class="how__card-info-link"
                 >Отидете на теста <span>></span></a
               >
             </div>
