--- a/src/html/_header-de.html
+++ b/src/html/_header-de.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header-de">
   <!-- Navbar -->
   <nav>
     <div class="main-container">
@@ -16,52 +16,52 @@
           </div>
           <li class="menu__item menu__item-first">
             <a href="#about" class="menu__item-link" data-scroll
-              >За компанията</a
+              >Über das Unternehmen</a
             >
           </li>
           <li class="menu__item">
             <a href="#benefits" class="menu__item-link" data-scroll
-              >Какво предлагаме</a
+              >Was wir anbieten</a
             >
           </li>
           <li class="menu__item">
             <a href="#how" class="menu__item-link" data-scroll
-              >Как да започнем
+              >Wie man anfängt
             </a>
           </li>
           <li class="menu__item">
-            <a href="#test" class="menu__item-link" data-scroll>Тест </a>
+            <a href="#test" class="menu__item-link" data-scroll>Test </a>
           </li>
           <li class="menu__item">
             <a href="#faq" class="menu__item-link" data-scroll>FAQ </a>
           </li>
           <div class="lang-mobile">
-            <a class="lang-mobile-bg">
+            <a href="index.html" class="lang-mobile-bg">
               <img src="../img/bg-flag.svg" alt="" />BG
             </a>
-            <a href="de.html" class="lang-mobile-de">
+            <a class="lang-mobile-de">
               <img src="../img/de-flag.svg" alt="" />DE
             </a>
           </div>
-          <a class="navabar-btn navabar-btn-mobile">Инвестирайте</a>
+          <a class="navabar-btn navabar-btn-mobile">Investieren</a>
         </ul>
         <div class="burger">
           <span></span>
         </div>
         <div class="btn-and-lang">
           <div class="lang">
-            <div class="main-lang">
-              <img src="../img/bg-flag.svg" alt="" />
-              BG
-              <img src="../img/lang-dropdown.svg" alt="" />
-            </div>
-
-            <a href="de.html" class="lang-dropdown">
+            <a class="main-lang">
               <img src="../img/de-flag.svg" alt="" />
               DE
+              <img src="../img/lang-dropdown.svg" alt="" />
+            </a>
+
+            <a href="index.html" class="lang-dropdown">
+              <img src="../img/bg-flag.svg" alt="" />
+              BG
             </a>
           </div>
-          <a href="#test" class="navabar-btn navabar-btn-pc">Инвестирайте</a>
+          <a href="#test" class="navabar-btn navabar-btn-pc">Investieren</a>
         </div>
       </div>
     </div>
