--- a/src/de.html
+++ b/src/de.html
@@ -13,7 +13,7 @@
     @@include('./html/_header-de.html')
 
     <!-- Main Page -->
-    <main>
+    <main class="de-page">
       <section class="hero">
         <div class="main-container">
           <div class="hero__inner">
